<resources>
    <string name="app_name">Mushroom</string>
    <string name="title_activity_intro">intro</string>
    <string name="OFF">OFF</string>
    <string name="ON">ON</string>
    <string name="cart">cart</string>
    <string name="clendar">clendar</string>
    <string name="BACK">BACK</string>
    <string name="yourInfomation">ข้อมูลส่วนตัว</string>
    <string name="Temp">Temp</string>
    <string name="Hum">Hum</string>
    <string name="REFRESH">REFRESH</string>
    <string name="IDline">ไอดีไลน์</string>
    <string name="save">บันทึก</string>
    <string name="Edit">แก้ไข</string>
    <string name="username">ชื่อเล่น</string>
    <string name="Status">Status</string>
    <string name="Offline">Offline</string>
    <string name="Day_Left">Day Left</string>
    <string name="SETTING">SETTINGS</string>
    <string name="please_select_kind">โปรดเลือกชนิดของเห็ด</string>
    <string name="mr_sell1">ก้อนเห็ด นางฟ้า นางรม</string>
    <string name="info_sell1">ก้อนเห็ดแต่ละก้อนมีน้ำหนัก 9ขีด - 1 กิโลกรัม</string>
    <string name="price_sell1">฿190</string>
    <string name="B">฿</string>
    <string name="mr_sell2">ก้อนเห็ดนางฟ้าภูฏาน</string>
    <string name="info_sell2">\tเห็ดภูฐาน \nเจริญได้ดีในอุณหภูมิห้องของประเทศไทย จึงให้ผลผลิตได้ง่าย เหมาะกับผู้ที่เริ่มเพาะเลี้ยงเห็ด</string>
    <string name="price_sell2">฿120</string>
    <string name="channel_description">IOT Project</string>
    <string name="INFO">information</string>

</resources>
