<?xml version="1.0" encoding="utf-8"?>
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fcd98d"
            style="@style/AppTheme"
            >

            <LinearLayout
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_centerVertical="true"
                android:background="@drawable/shape_bgwhite"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/header_calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:layout_margin="20dp"
                    android:text="@string/yourInfomation"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="#F57C00"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <EditText
                android:id="@+id/idline"
                tools:ignore="Autofill"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/IDline"
                android:layout_margin="20dp"
                android:textSize="25sp"
            />

            <EditText
                android:id="@+id/name"
                tools:ignore="Autofill"
                android:inputType="text"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/username"
                android:textSize="25sp"
                />

             <Button
                 android:id="@+id/SaveInformation"
                 android:layout_width="match_parent"
                 android:layout_margin="30dp"
                 android:layout_height="match_parent"
                 android:text="@string/Edit"
                 android:textSize="24sp"
                 android:textColor="@color/md_white_1000"
                 android:background="@drawable/shape_brown_button"
                 />

    </LinearLayout>


    <Button
        android:visibility="gone"
        android:id="@+id/btt"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginBottom="25dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/BACK"
        android:textColor="@color/md_white_1000"
        android:background="@drawable/shape_oval_blue"
        />

</RelativeLayout>