<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B3E5FC"
    android:orientation="vertical"
    style="@style/AppTheme">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#03A9F4"
        app:title="Muchroom Project APP"
        app:titleTextColor="@color/md_white_1000"
        app:subtitle="connect with netpie"
        app:subtitleTextColor="#B3E5FC"
        style="@style/ZCOOL_TextViewStyle"
        />

    <TextView
        android:id="@+id/Time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="#212121"
        android:textSize="22sp"
        android:text="@string/Day_Left" />

    <ImageButton
        android:id="@+id/cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_alignEnd="@+id/Time"
        android:layout_alignRight="@id/Time"
        android:layout_margin="15dp"
        android:background="@null"
        android:contentDescription="@string/cart"
        android:src="@drawable/ic_shortcut_shopping_cart" />
    <ImageButton
        android:id="@+id/calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cart"
        android:layout_alignEnd="@+id/Time"
        android:layout_alignRight="@id/Time"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:background="@null"
        android:contentDescription="@string/clendar"
        android:src="@drawable/ic_shortcut_calendar_today" />


    <RelativeLayout
        android:id="@+id/gaugeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <pl.pawelkleczkowski.customgauge.CustomGauge
            android:id="@+id/gauge1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="102dp"
            android:layout_marginEnd="38dp"
            android:layout_marginRight="38dp"
            android:layout_marginBottom="178dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            app:gaugeEndValue="100"
            app:gaugePointEndColor="@color/md_blue_grey_600"
            app:gaugePointStartColor="@color/md_indigo_A400"
            app:gaugeStartAngle="135"
            app:gaugeStartValue="0"
            app:gaugeStrokeCap="ROUND"
            app:gaugeStrokeColor="#FFFFFF"
            app:gaugeStrokeWidth="16dp"
            app:gaugeSweepAngle="270" />

        <pl.pawelkleczkowski.customgauge.CustomGauge
            android:id="@+id/gauge2"
            android:layout_width="239dp"
            android:layout_height="226dp"
            android:layout_alignStart="@+id/gauge1"
            android:layout_alignLeft="@+id/gauge1"
            android:layout_alignTop="@+id/gauge1"
            android:layout_alignEnd="@+id/gauge1"
            android:layout_alignRight="@+id/gauge1"
            android:layout_alignBottom="@+id/gauge1"
            android:layout_centerInParent="true"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="34dp"
            android:layout_marginRight="34dp"
            android:layout_marginBottom="29dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            app:gaugeEndValue="100"
            app:gaugePointEndColor="#ff3d00"
            app:gaugePointStartColor="#ff6d00"
            app:gaugeStartAngle="135"
            app:gaugeStartValue="0"
            app:gaugeStrokeCap="ROUND"
            app:gaugeStrokeColor="#FFFFFF"
            app:gaugeStrokeWidth="15dp"
            app:gaugeSweepAngle="270" />


        <ImageView
            android:contentDescription="@string/app_name"
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_above="@+id/textView2"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:scaleType="fitXY"
            android:src="@drawable/mr3"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_above="@+id/textView3"
            android:layout_alignStart="@+id/textView3"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignEnd="@+id/textView3"
            android:layout_alignRight="@+id/textView3"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginEnd="-2dp"
            android:layout_marginRight="-2dp"
            android:gravity="center"
            android:shadowColor="@color/md_red_200"
            android:text="@string/Temp"
            android:textColor="#ff3d00"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/gauge2"
            android:layout_alignLeft="@+id/gauge2"
            android:layout_alignEnd="@+id/gauge2"
            android:layout_alignRight="@+id/gauge2"
            android:layout_alignBottom="@+id/gauge1"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="3dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="-2dp"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:text="@string/Hum"
            android:textColor="@color/md_indigo_A700"
            android:textSize="30sp" />


    </RelativeLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Time"
        android:layout_centerInParent="true"
        android:layout_marginTop="9dp"
        android:background="@drawable/shape_rec_l_brown"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/Offline"
        android:textSize="18sp"
        android:textColor="@color/md_white_1000" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/shape_rec_l_brown"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/Status"
        android:textColor="@color/md_white_1000"
        android:textSize="18sp" />


    <RelativeLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape_bot"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="0dp">

        <Button
            android:id="@+id/button"
            android:layout_width="100dp"
            android:layout_height="37dp"
            android:layout_alignBottom="@+id/switch1"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="31dp"
            android:layout_marginLeft="31dp"
            android:layout_marginEnd="33dp"
            android:layout_marginRight="33dp"
            android:layout_marginBottom="-1dp"
            android:background="@drawable/shape_brown_button"
            android:padding="10dp"
            android:text="@string/REFRESH"
            android:textColor="@drawable/color_button" />


        <Switch
            android:id="@+id/switch1"
            android:background="@drawable/shape_brown_button"
            android:gravity="center"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="33dp"
            android:layout_marginRight="33dp"
            android:layout_marginBottom="29dp"
            android:textColor="@drawable/color_button"
            android:theme="@style/SwitchTheme"
            android:textStyle="bold"
            android:padding="10dp"/>

    </RelativeLayout>


</RelativeLayout>
