<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303F9F">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >

        <LinearLayout
            android:id="@+id/linear_shop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/shape_bgblue"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/header_shop"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@null"
                android:text="Shop"
                android:textSize="40sp"
                android:textColor="#536DFE"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:background="@drawable/shape_bgwhite"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/idline"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="23sp"
                    android:layout_margin="5dp"
                    android:text="@string/IDline"
                    />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="23sp"
                    android:layout_margin="5dp"
                    android:text="@string/username"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="25dp"
                android:background="@drawable/shape_bgwhite"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/infoName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/please_select_kind"
                    android:textColor="#212121"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/infoPic"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/mr3" />

                <TextView
                    android:id="@+id/infoDescrib"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text=""
                    android:textColor="#757575"
                    android:textSize="15sp"
                    android:textStyle="normal" />

                <Spinner
                    android:id="@+id/select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center">

                </Spinner>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:text="ราคา"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/md_red_500"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/infoPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:text="@string/B"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/md_red_500"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:text="จำนวน"
                        android:textColor="@color/md_black_1000"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/Amount1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </Spinner>

                </LinearLayout>

                <ImageButton
                    android:id="@+id/buy_btt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:src="@drawable/ic_shortcut_shopping_cart" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
    <Button
        android:visibility="gone"
        android:id="@+id/btt"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shape_oval_blue"
        android:text="@string/BACK"
        android:textColor="@color/md_white_1000" />
</RelativeLayout>